# Sobel_Operator

./: .gitignore  CMakeLists.txt  README.md
include/: sdkHelper.h  stopwatch_functions.h  util.cuh
src/: hw6.cpp  util.cu
